# WireEngine

./: .gitignore  CMakeLists.txt  WireEngine.sln
WireEngine/: WireEngine.vcxproj  WireEngine.vcxproj.filters
WireEngine/Core/: wire_window.c  wire_window.cpp  wire_window.h
WireEngine/Core/Internal/: d3dsetup.c  d3dsetup.cpp  d3dsetup.h  renderobjects.h  wire_window_internal.h
WireEngineTestspace/: WireEngineTestspace.vcxproj  main.c
dependencies/glew-2.2.0/: README.md
dependencies/glew-2.2.0/auto/core/gl/: GL_VERSION_2_0
dependencies/glew-2.2.0/auto/extensions/gl/: GL_ARB_ES2_compatibility  GL_QCOM_extended_get2
dependencies/glew-2.2.0/src/: glew.c
include/: wire_window.h
include/Core/: wire_renderer.h  wire_shader_manager.h  wire_window.h
include/Core/Internal/: error_handling.h
include/Core/Models/: objects.h
include/glew-2.2.0/auto/extensions/gl/: GL_REGAL_log
include/glew-2.2.0/auto/src/: header.html
include/glew-2.2.0/doc/: advanced.html  basic.html  build.html  credits.html  glew.html  glxew.html  index.html  install.html  wglew.html
src/Core/: wire_renderer.cpp  wire_renderer.h  wire_shader_manager.cpp  wire_shader_manager.h  wire_window.cpp  wire_window.h
src/Core/Internal/: error_handling.cpp  error_handling.h  wire_window_internal.h
src/Core/Models/: objects.h  objects_wire_models.cpp
src/Core/Shaders/: vertex_shader.h
src/Shaders/: fragment_shader.h  vertex_shader.h
